add some steps in cubit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_localization: ^0.2.0
   flutter_svg: ^2.0.10+1
   dio: ^5.7.0
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
